# To-Do-Lists_book

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/config/: settings.py  urls.py
backend/frontend/: index.html
backend/frontend/assets/: index-0d462817.js  index-83864a5b.css
backend/todo/: admin.py  models.py  serializers.py  urls.py  views.py
backend/todo/migrations/: 0001_initial.py  0002_todoaction_unique title for each to-do list_and_more.py  0003_todoaction_completed_alter_todoaction_to_do_list.py
backend/users/: admin.py  models.py
backend/users/migrations/: 0001_initial.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.vue  main.js  style.css
frontend/src/router/: index.js
frontend/src/views/: Auth.vue  Http404.vue  LogIn.vue  SignUp.vue  ToDoList.vue  ToDoLists.vue
