[tool.poetry]
name = "to-do-app"
version = "0.1.0"
description = ""
authors = ["Leonid Terletskyi <leo.terletskyi@gmail.com>"]
readme = "README.md"
packages = [{include = "to_do_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.5"
django-cors-headers = "^3.14.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
